Update ChessMatch.java